# c-bbb-pwm

./: .gitignore  .travis.yml  .travis_prebuild.sh  .ycm_extra_conf.py  CMakeLists.txt  Doxyfile  README.md  libbbbpwm.pc.in
include/: bbb_capemgr.h  bbb_capemgr_internal.h  bbb_pwm.h  bbb_pwm_internal.h  pulser.h  pulser_internal.h  tunable_pwm.h  tunable_pwm_internal.h
src/: bbb_capemgr.c  bbb_pwm.c  pulser.c  tunable_pwm.c
test/: CMakeLists.txt  ppm_signal_test.c  test_file_io.c  test_find_capemgr.c  test_macros.h  test_pwm_control.c  test_pwm_io.c  test_pwm_list.c
util/: CMakeLists.txt  bbb_pwm_example.c  bbb_pwm_tool.c  disable_pwm.c  enable_pwm.c  find_pwm.c  list_bbb_pwms.c  list_parts.sh
