file(GLOB UTIL_SOURCE_FILES "*.c")
set(LOCAL_UTIL_TARGETS "")

foreach(CURRENT_UTIL_SOURCE_FILE ${UTIL_SOURCE_FILES})
	get_filename_component(CURRENT_UTIL_BINARY ${CURRENT_UTIL_SOURCE_FILE} NAME_WE)
	
	add_executable(${CURRENT_UTIL_BINARY} ${CURRENT_UTIL_SOURCE_FILE})
	target_include_directories(${CURRENT_UTIL_BINARY} PUBLIC ${LIBBBBPWM_INCLUDEDIR})
	target_link_libraries(${CURRENT_UTIL_BINARY} ${LIBBBBPWM_LIBRARY})

	set(LOCAL_UTIL_TARGETS "${LOCAL_UTIL_TARGETS}${CMAKE_CURRENT_BINARY_DIR}/${CURRENT_UTIL_BINARY}")
endforeach()

set(LIBBBBPWM_UTIL_TARGETS "${LOCAL_UTIL_TARGETS}" PARENT_SCOPE)
